--- a/concepts/core-architecture/assertions-failures.mdx
+++ b/concepts/core-architecture/assertions-failures.mdx
@@ -1,235 +1,257 @@
 ---
-title: "Assertions and Failure Modes"
-description: "Details the assertion types in GoogleTest—including fatal, non-fatal, user-defined, and predicate assertions. Explains how assertion results are reported and how failure handling enables precise diagnostics and test continuation."
+title: "Assertions, Failures, and Test Results"
+description: "Understand the design and flow of assertions in GoogleTest. See how fatal vs. non-fatal failures are handled, how assertion macros are implemented, and how test results propagate and are reported through the framework for both standard and custom assertions."
 ---
 
-# Assertions and Failure Modes
+# Assertions, Failures, and Test Results
 
-Understanding assertions in GoogleTest is essential to producing effective and reliable unit tests. This guide details the different types of assertions provided by GoogleTest, how their results are reported, and how failure handling capabilities allow precise diagnostics and control of test flow.
-
----
-
-## Types of Assertions in GoogleTest
-
-GoogleTest offers a rich set of assertion macros that can generate success, non-fatal failures, or fatal failures. This differentiated behavior empowers you to control how tests continue or stop upon assertion outcomes.
-
-### 1. Fatal Assertions
-
-- **Purpose:** Immediately halt the current function when the assertion fails.
-- **Macros:** Begin with `ASSERT_`, e.g., `ASSERT_TRUE(condition)`, `ASSERT_EQ(val1, val2)`.
-- **Behavior:** Upon failure, control returns from the current test function, preventing subsequent lines from executing within that function.
-
-### 2. Non-fatal Assertions
-
-- **Purpose:** Report failures, but allow the current function to continue executing.
-- **Macros:** Begin with `EXPECT_`, e.g., `EXPECT_TRUE(condition)`, `EXPECT_EQ(val1, val2)`.
-- **Behavior:** Failures are registered but testing proceeds within the current function, allowing multiple issues to be detected before the test ends.
-
-### 3. Explicit Success and Failure
-
-- Use `SUCCEED()` to explicitly generate a success (typically documentary).
-- Use `FAIL()` or `ADD_FAILURE()` to generate fatal or non-fatal failures respectively without any condition.
-
-### 4. Predicate Assertions
-
-For complex checks not covered by built-in macros, GoogleTest provides predicate assertions that express conditions with clearer failure messages.
-
-- **Boolean Predicate Assertions:** `EXPECT_PRED1`, `EXPECT_PRED2`, ..., `ASSERT_PRED1`, etc., which accept functions or functors returning `bool`.
-- **Predicate Formatter Assertions:** `EXPECT_PRED_FORMATN`, which use functions returning `AssertionResult` allowing richer failure diagnostics including expression strings and custom messages.
-
-### 5. String and C-String Assertions
-
-GoogleTest distinguishes between pointers and actual C-string content in equality checks:
-
-- Use `EXPECT_STREQ()` and `EXPECT_STRNE()` for comparing C string content.
-- Wide strings (`wchar_t*`) are also supported, with failure messages converted to UTF-8.
-
-### 6. Floating-Point Comparisons
-
-Specialized macros like `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, and `EXPECT_NEAR` accommodate floating-point rounding imprecision and provide ULP-based comparisons.
-
-### 7. Exception Assertions
-
-These macros test if statements throw or don’t throw exceptions:
-
-- `EXPECT_THROW`, `ASSERT_THROW` verify that a statement throws an expected exception.
-- `EXPECT_NO_THROW`, `ASSERT_NO_THROW` verify that a statement does not throw.
-- `EXPECT_ANY_THROW`, `ASSERT_ANY_THROW` verify that a statement throws an exception of any type.
-
-### 8. Death Assertions
-
-Death tests check that code causes the program to exit or terminate under specific conditions. See the Death Tests guide for details on macros like `EXPECT_DEATH`.
+Understanding assertions is fundamental for effective testing with GoogleTest. This guide explores how assertion macros work, distinguishes between fatal and non-fatal failures, explains how failures propagate through tests, and details how test results are reported within the framework. It also covers the handling of custom assertions and the flow of test outcomes.
 
 ---
 
-## How Assertion Results Are Reported
+## 1. Introduction to Assertions in GoogleTest
 
-When tests run, assertions yield results encapsulated in **TestPartResult** objects categorized as:
+GoogleTest provides a rich set of assertion macros designed to verify that program behavior matches expectations. Assertions serve as checkpoints in test code, indicating success or failure of certain conditions.
 
-- **Success:** The assertion passed.
-- **Non-Fatal Failure:** The assertion failed but execution continues.
-- **Fatal Failure:** The assertion failed and current function execution stops immediately.
-- **Skip:** The test or assertion was skipped.
+- **EXPECT_** assertions generate *non-fatal* failures — the test continues after failure.
+- **ASSERT_** assertions generate *fatal* failures — the test aborts immediately after failure.
 
-GoogleTest captures these results, attaches diagnostic messages, and may include stack traces unless the assertion is a success or a skip.
+Assertions can be equipped with custom failure messages using stream operators (`<<`), which enhances diagnostic capabilities.
 
-Failure messages printed to the console are clear and include:
-
-- File and line number where the failure occurred.
-- The actual and expected values or conditions.
-- Additional user-supplied messages if provided with streaming (`<<`) syntax.
-
-For example, a failing equality check will print the expressions and their evaluated values:
-
-```none
-Expected equality of these values:
-  foo
-    Which is: 5
-  bar
-    Which is: 6
-```
-
-When assertions fail, GoogleTest considers the test as failed but continues running other tests unless a **fatal failure** or the `fail_fast` flag is set.
-
----
-
-## Failure Handling and Test Flow Control
-
-GoogleTest provides flexible control over test execution in the presence of assertion failures:
-
-### 1. Propagation of Fatal Failures
-
-Fatal assertions only abort the current function, not the entire test case or program. To handle this:
-
-- Use `HasFatalFailure()` to detect a fatal failure state and return early.
-- Use `ASSERT_NO_FATAL_FAILURE()` macro to ensure a statement generates no fatal failures.
-- Alternatively, enable exceptions by adding a listener that throws on fatal failures, transforming `ASSERT_*` failures into exceptions that can unwind the call stack.
-
-### 2. Skipping Tests
-
-- The macro `GTEST_SKIP()` can be used to skip tests at runtime with an optional streamed message.
-- It aborts the current function but does not mark the test as failed.
-
-### 3. Flags Influencing Failure Behavior
-
-- **`--gtest_fail_fast`** (or `fail_fast` flag) causes the test runner to stop after the first failure across any test.
-- **`--gtest_break_on_failure`** triggers a debugger breakpoint on assertion failures, useful for interactive debugging.
-- **`--gtest_throw_on_failure`** throws exceptions on failures if exceptions are enabled, allowing better integration with external frameworks.
-
-They can be set via environment variables or command-line flags.
-
----
-
-## Practical Usage Examples
-
-### Fatal versus Non-Fatal:
+**Example:**
 
 ```cpp
-TEST(MyTestSuite, Example) {
-  EXPECT_EQ(1, Foo());  // Fails but continues
-  ASSERT_EQ(2, Bar());  // Fails and returns from this test function
-  // The code below runs only if ASSERT_EQ passes
-  Baz();
+EXPECT_EQ(value, expected) << "Value did not meet expectations";
+ASSERT_TRUE(condition) << "Condition failed";
+```
+
+---
+
+## 2. Fatal vs Non-Fatal Failures
+
+### Fatal Failures
+A *fatal failure* immediately aborts the current function, which is usually a test body or a `void` helper function used in tests. This behavior guarantees that subsequent code that depends on the assumption that the assertion passed will not execute.
+
+*Usage:* Typically produced by `ASSERT_*()` macros or `FAIL()`.
+
+### Non-Fatal Failures
+A *non-fatal failure* records the failure but lets the current function continue executing, allowing subsequent assertions to run and report other issues.
+
+*Usage:* Typically produced by `EXPECT_*()` macros or `ADD_FAILURE()`.
+
+### Choosing Between Them
+Use `ASSERT_*()` when further test code depends on the assertion’s success, preventing misleading failures or crashes. Use `EXPECT_*()` when it is safe and helpful to continue the test after a failure.
+
+<Check>
+Remember: Fatal failures only abort the current function, **not** the entire test. Use helper macros for subroutines that may fail (see Section 6).
+</Check>
+
+---
+
+## 3. The Flow and Propagation of Assertion Results
+
+Assertions result in `TestPartResult` objects representing success, failure (fatal or non-fatal), or skip. These results are captured by test infrastructure and reported accordingly.
+
+- Upon failure, GoogleTest adds a `TestPartResult` to the current `TestResult`.
+- For fatal failures, the current function returns immediately, but the overall test continues unless fatal failures are explicitly propagated (see below).
+- Test results accumulate within `TestInfo` objects representing individual tests.
+- Test suites aggregate results from their constituent tests.
+
+### Propagation Caveat
+Since fatal failures abort *only* the current function, writing helper functions containing `ASSERT_*()` requires care. Otherwise, test execution may continue beyond the failure point leading to unclear outcomes or crashes.
+
+---
+
+## 4. Assertion Macros and Implementation Overview
+
+### Implementation of Assertion Macros
+
+Assertion macros are implemented to:
+
+- Evaluate expressions exactly once to avoid side effects.
+- Create informative failure messages including the expression text.
+- Support streaming of custom messages.
+- Determine whether to generate fatal or non-fatal failures.
+- Collect test part results and report them through the current test context.
+
+The core abstraction is the `AssertHelper` object, which captures the failure context and streams user messages before committing the result to the framework.
+
+### Streaming Assertion Messages
+
+Users can append streaming text to assertions, which appends to the failure message if the assertion fails.
+
+```cpp
+EXPECT_TRUE(x > 0) << "x must be positive, but was " << x;
+```
+
+
+---
+
+## 5. How Test Results Are Reported
+
+GoogleTest organizes test results hierarchically:
+
+- **TestPartResult:** Represents an individual assertion result.
+- **TestResult:** Tracks results for a test, including all `TestPartResult`s.
+- **TestInfo:** Encapsulates a test’s metadata and its `TestResult`.
+- **TestSuite:** Aggregates multiple Tests and their results.
+- **UnitTest:** The global test program state containing all `TestSuite`s.
+
+### Reporting Flow
+
+1. When an assertion runs, it calls into the framework’s `AddTestPartResult` method.
+2. The result is propagated to listeners subscribed to test events.
+3. Listeners such as `PrettyUnitTestResultPrinter` and XML/JSON generators consume events and produce output.
+4. At the end of test execution, summary output is generated including passed, failed, and skipped tests.
+
+### Test Event Listeners
+GoogleTest uses the **Event Listener API** to notify components of test progress and results. Users can extend this system to capture or redirect test results.
+
+---
+
+## 6. Handling Failures and Custom Assertions
+
+### Catching Failures in Subroutines
+When subroutines contain `ASSERT_` macros, failures abort the current function only. To handle this:
+
+- Use `ASSERT_NO_FATAL_FAILURE()` / `EXPECT_NO_FATAL_FAILURE()` around calls to subroutines to detect failures within them.
+- Check for failures with `HasFatalFailure()` after subroutine calls and return early if failures occurred.
+- Alternatively, enable exception mode (`throw_on_failure` flag) to have assertions throw exceptions upon failure (see Section 7).
+
+---
+
+## 7. Exception Mode and Throwing on Failure
+
+GoogleTest supports a *throw-on-failure* mode controlled by the flag `--gtest_throw_on_failure`:
+
+- When enabled and exceptions are available, failed assertions throw an exception of type `GoogleTestFailureException`.
+- When exceptions are not available, it exits the program with a non-zero status.
+
+This mode is especially useful to integrate GoogleTest assertions in other test frameworks.
+
+**Example:**
+
+```cpp
+GTEST_FLAG_SET(throw_on_failure, true);
+try {
+  EXPECT_EQ(1, 2);  // Throws on failure
+} catch (const std::runtime_error& e) {
+  // Handle the failure
 }
 ```
 
-### Using HasFatalFailure to Early-Exit:
+---
+
+## 8. Custom Assertion Results with AssertionResult
+
+For complex predicates where you want rich failure messages, you can return an `AssertionResult` object instead of a boolean. This allows detailed diagnostics when an assertion like `EXPECT_TRUE()` fails.
+
+**Example:**
 
 ```cpp
-void Helper() {
-  ASSERT_TRUE(CheckCondition());
-  // ... more code ...
-}
-
-TEST(MyTestSuite, EarlyExitExample) {
-  Helper();
-  if (HasFatalFailure()) return;  // Early exit if Helper failed
-  EXPECT_TRUE(AnotherCheck());
-}
-```
-
-### Skipping a Test at Runtime:
-
-```cpp
-TEST(MyTest, NeedsNetwork) {
-  if (!NetworkAvailable()) {
-    GTEST_SKIP() << "Network not available, skipping.";
-  }
-  // test body
-}
-```
-
-### Using Predicate Assertion for Better Messages:
-
-```cpp
-AssertionResult IsEven(int n) {
+testing::AssertionResult IsEven(int n) {
   if (n % 2 == 0)
-    return AssertionSuccess() << n << " is even";
+    return testing::AssertionSuccess() << n << " is even";
   else
-    return AssertionFailure() << n << " is odd";
+    return testing::AssertionFailure() << n << " is odd";
 }
 
-TEST(ExampleTest, PredicateAssertion) {
-  EXPECT_PRED_FORMAT1(IsEven, 3);
+EXPECT_TRUE(IsEven(3));  // Fails with message detailing the value.
+```
+
+You can also create predicate-format functions to customize failure message formatting.
+
+---
+
+## 9. Test Skipping and Success Assertions
+
+- **SUCCEED()** explicitly records a success; it does not cause the test to terminate.
+- **FAIL()** generates a fatal failure.
+- **ADD_FAILURE()** generates a non-fatal failure.
+- **GTEST_SKIP()** lets tests skip execution conditionally at runtime with optional messaging.
+
+---
+
+## 10. Tips, Best Practices, and Troubleshooting
+
+- Always use assertion macros that match your desired failure handling (fatal vs. non-fatal).
+- Ensure the arguments of assertions have no side effects or are safe to evaluate once.
+- Use streaming of messages for clearer diagnostics.
+- For subroutine failures, consider exception mode or `ASSERT_NO_FATAL_FAILURE` to properly propagate failures.
+- Avoid mixing `TEST` and `TEST_F` in the same test suite as this causes errors.
+- Check for disabled tests that might be silently skipped; use flags `--gtest_also_run_disabled_tests` or prefix with `DISABLED_`.
+- Use `SCOPED_TRACE` to add context for nested assertions and complex call chains.
+
+---
+
+## 11. Visual Overview of Assertion and Test Result Flow
+
+```mermaid
+flowchart TD
+  subgraph User Test Code
+    A(Assertion Macro Invocation)
+  end
+
+  subgraph GoogleTest Framework
+    A -->|Evaluates and Checks Condition| B[AssertionResult Object]
+    B -->|If Failure| C[TestPartResult Created]
+    C --> D[TestResult Updated]
+    D --> E[TestInfo Updated]
+    E --> F[TestSuite Aggregates]
+    F --> G[UnitTest Aggregates]
+    G --> H{Listeners Receive Events}
+  end
+
+  H --> I[PrettyUnitTestResultPrinter]
+  H --> J[XmlUnitTestResultPrinter]
+  H --> K[JsonUnitTestResultPrinter]
+  H --> L[User-Defined Listeners]
+
+  subgraph Test Execution Control
+    C --> M{Is Fatal Failure?}
+    M -->|Yes| N[Abort Current Function]
+    M -->|No| O[Continue Test]
+    N & O --> P{Exception Mode Enabled?}
+    P -->|Yes| Q[Throw Exception]
+    P -->|No| R[Exit or Continue]
+  end
+
+  classDef fatal fill:#faa,border:#f00;
+  class C,H,P,Q fatal;
+```
+
+---
+
+## 12. References and Further Reading
+
+- [Assertions Reference](./reference/assertions.md) - Complete API list of assertion macros.
+- [Advanced GoogleTest Topics](./advanced.md) - Detailed concepts including predicate assertions and exception handling.
+- [Core Concepts and Terminology](./overview/core-concepts-architecture/core-concepts-terminology.md) - Definitions and roles of test entities.
+- [Catching Failures](./advanced.md#catching-failures) - Techniques to handle and test assertion failures within code.
+- [Scoped Trace Usage](./advanced.md#using-assertions-in-sub-routines) - Useful for adding diagnostic context.
+
+---
+
+## 13. Example: Using EXPECT_FATAL_FAILURE to Test Assertion Failures
+
+```cpp
+#include "gtest/gtest-spi.h"  // For EXPECT_FATAL_FAILURE
+
+void AddFatalFailure() {
+  FAIL() << "Expected fatal failure.";
+}
+
+TEST(ExampleTest, TestFatalFailureDetection) {
+  EXPECT_FATAL_FAILURE(AddFatalFailure(), "Expected fatal failure.");
 }
 ```
 
-On failure, the message will contain detailed diagnostics:
-
-```none
-Value of: IsEven(3)
-  Actual: false (3 is odd)
-Expected: true
-```
+This shows how you can programmatically check that a function triggers a fatal failure.
 
 ---
 
-## Common Pitfalls and Best Practices
+## Conclusion
 
-- **Understand Fail Behavior:** Fatal failures abort only the current function. Use `HasFatalFailure()` or exceptions to propagate failures properly.
-- **Stream Messages:** Always leverage `<<` streaming to add clear context to your assertions.
-- **Avoid Assertions in Non-void Functions:** Fatal assertion macros (`ASSERT_`, `FAIL()`) should only be used in `void` functions.
-- **Use Skipping Wisely:** Use `GTEST_SKIP()` to mark tests as skipped when preconditions are unmet without failing the test.
-- **Separate Fatal and Non-Fatal Use Cases:** Use `EXPECT_` when you want tests to continue execution to detect multiple failures.
-- **Use Predicate and Predicate-Formatter Macros:** For complex conditions, use predicate assertions to create clearer failure messages.
+GoogleTest’s assertion system is designed to give precise control over test flow, failure handling, and diagnostic output. Understanding fatal vs. non-fatal failures, how assertions propagate, and utilizing features like exception mode and `AssertionResult` empowers developers to write expressive, maintainable, and robust tests.
 
----
-
-## How Assertions Integrate in GoogleTest Architecture
-
-Assertions tie into GoogleTest in the following way:
-
-1. When an assertion is invoked, it calls `UnitTest::AddTestPartResult()` with the result type and message.
-
-2. Failure details (file, line, message, stack trace) are captured and stored in `TestPartResult` objects.
-
-3. `TestResult` objects aggregate all `TestPartResult` instances for a given test.
-
-4. Event listeners like the default result printer pick up failure events and print formatted diagnostics.
-
-5. Flags like `fail_fast` and `break_on_failure` influence whether execution continues or breaks.
-
-This design allows the GoogleTest framework to provide flexible and rich diagnostics that help developers quickly locate issues.
-
----
-
-## Troubleshooting Assertion Failures
-
-- If you encounter unexpected continuation after `ASSERT_*` failures, verify your test functions return `void`.
-- Use `HasFatalFailure()` to detect and handle fatal failure states where needed.
-- Check test filter settings; some failures may be skipped due to filtering or sharding.
-- Use `SCOPED_TRACE` to add contextual information to help diagnose failures in nested calls.
-
----
-
-## Additional Resources
-
-- [Assertions Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md)
-- [Advanced Guide on Assertions](https://github.com/google/googletest/blob/main/docs/advanced.md#more-assertions)
-- [Death Tests Guide](https://github.com/google/googletest/blob/main/guides/real-world-workflows/death-tests.md)
-- [Event Listener API](https://github.com/google/googletest/blob/main/docs/advanced.md#extending-google-test-by-handling-test-events)
-- [Test Discovery and Execution Lifecycle](https://github.com/google/googletest/blob/main/concepts/core-architecture/test-discovery-lifecycle.md)
-
----
-
-Understanding how GoogleTest assertions work and how their failures influence test flow is crucial for writing robust tests and diagnosing issues efficiently. This guide equips you to use assertions effectively in your GoogleTest-based test suites.
+If you master these concepts, you will be well equipped to handle both standard and complex test scenarios effectively.
